--- a/scss/forms/_form-check-radio-box.scss
+++ b/scss/forms/_form-check-radio-box.scss
@@ -107,6 +107,9 @@
 }
 
 [data-#{$prefix}theme="dark"] {
+    .radio-box .form-check-label {
+        background-color: var(--#{$prefix}body-bg);
+    }
     .radio-box .form-check-label:hover {
         background-color: var(--#{$prefix}primary-bg-subtle);
         border-color: var(--#{$prefix}primary-border-subtle);
